--- a/style.css
+++ b/style.css
@@ -1,206 +1,222 @@
 body {
-            font-family: 'Poppins', sans-serif;
-            margin: 0;
-            padding: 0;
-            background: #000;
-            color: #00FF33;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            animation: fadeIn 1s ease-in-out;
-            overflow-x: hidden;
-            }
-            @font-face {
-              font-family: 'Poppins';
-              font-style: normal;
-              font-weight: 300;
-              font-display: swap;
-              src: url(https://fonts.gstatic.com/s/poppins/v22/pxiByp8kv8JHgFVrLDz8Z1xlFd2JQEk.woff2) format('woff2');
-              unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-            }
-            .emphase {
-            color: #A883BA;
-            }
-            .container {
-            width: 90%;
-            background: rgba(0, 0, 0, 0.7);
-            padding: 20px;
-            box-shadow: 0 0 20px rgba(0,0,0,0.3);
-            border-radius: 15px;
-            backdrop-filter: blur(10px);
-            animation: slideUp 1s ease-in-out;
-            text-align: left;
-            padding-left: 40px;
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    background: #000;
+    color: #00FF33;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    animation: fadeIn 1s ease-in-out;
+    overflow-x: hidden;
+}
 
-            overflow-x: hidden;
-            overflow-wrap: break-word; 
-            white-space: normal; 
-            max-width: 1000px;
-        }
-        }
-        h1, h2, h3 {
-            color: #00FF33;
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/poppins/v22/pxiByp8kv8JHgFVrLDz8Z1xlFd2JQEk.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
-        }
-        .section {
-            margin-top: 30px;
-        }
-        .brush-highlight {
-            position: relative;
-            display: inline-block;
-            z-index: 1;
-        }
-        .brush-highlight::before {
-            content: '';
-            position: absolute;
-            left: 0;
-            bottom: 2px;
-            width: 100%;
-            height: 25px;
-            background: rgba(255, 255, 0, 0.5);
-            z-index: -1;
-            transform: rotate(-2deg);
-            border-radius: 3px;
-        }
-        .timeline-container {
-            display: flex;
-            overflow-x: auto;
-            padding: 20px;
-            white-space: nowrap;
-            scroll-behavior: smooth;
-            overflow-x: hidden;
-            overflow-wrap: break-word; 
-            white-space: normal;
-            transform: translateY(-10px);
-            transition: opacity 0.5s ease, max-height 0.5s ease, transform 0.5s ease;
-        }
-        .timeline-item {
-            position: relative;
-            display: inline-block;
-            width: 220px;
-            background: rgba(255, 255, 255, 0.1);
-            margin: 10px;
-            padding: 15px;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: transform 0.3s ease-in-out;
-        }
-        .timeline-item:hover {
-            transform: scale(1.05);
-            background: rgba(255, 255, 255, 0.3);
-        }
-        .timeline-item:active {
-            transform: scale(1.2);
-        }
-        .timeline-date {
-            font-weight: bold;
-            color: #A883BA;
-        }
-        .description {
-            display: none;
-            margin-top: 10px;
-            padding: 10px;
-            background: rgba(0, 0, 0, 0.5);
-            border-radius: 8px;
-            opacity: 0;
-            transform: translateY(-10px);
-            transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
-            font-family: 'Courier New', Courier, monospace;
-        }
-        .description.active {
-            display: block;
-            opacity: 1;
-            transform: translateY(0);
-        }
-        .info-cards {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 10px;
-            margin-top: 15px;
-        }
-        .info-card {
-            background: rgba(255, 255, 255, 0.3);
-            padding: 10px;
-            border-radius: 5px;
-            text-align: center;
-            min-width: 120px;
-        }
+.emphase {
+    color: #A883BA;
+}
+
+.container {
+    width: 90%;
+    background: rgba(0, 0, 0, 0.7);
+    padding: 20px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.3);
+    border-radius: 15px;
+    backdrop-filter: blur(10px);
+    animation: slideUp 1s ease-in-out;
+    text-align: left;
+    padding-left: 40px;
+
+    overflow-x: hidden;
+    overflow-wrap: break-word; 
+    white-space: normal; 
+    max-width: 1000px;
+}
+
+h1, h2, h3 {
+    color: #00FF33;
+}
+
+.section {
+    margin-top: 30px;
+}
+
+.brush-highlight {
+    position: relative;
+    display: inline-block;
+    z-index: 1;
+}
+
+.brush-highlight::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 2px;
+    width: 100%;
+    height: 25px;
+    background: rgba(255, 255, 0, 0.5);
+    z-index: -1;
+    transform: rotate(-2deg);
+    border-radius: 3px;
+}
+
+.timeline-container {
+    display: flex;
+    overflow-x: auto;
+    padding: 20px;
+    white-space: nowrap;
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+    overflow-wrap: break-word; 
+    white-space: normal;
+    transform: translateY(-10px);
+    transition: opacity 0.5s ease, max-height 0.5s ease, transform 0.5s ease;
+}
+
+.timeline-item {
+    position: relative;
+    display: inline-block;
+    width: 220px;
+    background: rgba(255, 255, 255, 0.1);
+    margin: 10px;
+    padding: 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+}
+
+.timeline-item:hover {
+    transform: scale(1.05);
+    background: rgba(255, 255, 255, 0.3);
+}
+
+.timeline-item:active {
+    transform: scale(1.2);
+}
+
+.timeline-date {
+    font-weight: bold;
+    color: #A883BA;
+}
+
+.description {
+    display: none;
+    margin-top: 10px;
+    padding: 10px;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
+    opacity: 0;
+    transform: translateY(-10px);
+    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.description.active {
+    display: block;
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.info-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 15px;
+}
+
+.info-card {
+    background: rgba(255, 255, 255, 0.3);
+    padding: 10px;
+    border-radius: 5px;
+    text-align: center;
+    min-width: 120px;
+}
         
-        .typing {
-          font-family: monospace;
-          color:#0000;
-          background:
-            linear-gradient(-90deg,#00FF33 10px,#0000 0) 10px 0,
-            linear-gradient(#00FF33 0 0) 0 0;
-          background-size:calc(var(--n)*1ch) 200%;
-          -webkit-background-clip:padding-box,text;
-          background-clip:padding-box,text;
-          background-repeat:no-repeat;
-          animation: 
-            b .7s infinite steps(1),   
-            t calc(var(--n)*.02s) steps(var(--n)) forwards;
-        }
-        @keyframes t{
-          from {background-size:0 200%}
-        }
-        @keyframes b{
-          50% {background-position:0 -100%,0 0}
-        }
-        .typing-full {
-          color:#0000;
-          background:
-            linear-gradient(#00FF33 0 0) 0 50%/150% 95%,
-            linear-gradient(#00FF33 0 0) 0 0  /100% 100%;
-          -webkit-background-clip:padding-box,text;
-          background-clip:padding-box,text;
-          background-repeat:no-repeat;
-          -webkit-box-decoration-break: clone;
-          box-decoration-break: clone;
-          animation: 
-           tfull 1s forwards,
-           bfull 1s .8s forwards;
-        }
+.typing {
+  font-family: monospace;
+  color:#0000;
+  background:
+    linear-gradient(-90deg,#00FF33 10px,#0000 0) 10px 0,
+    linear-gradient(#00FF33 0 0) 0 0;
+  background-size:calc(var(--n)*1ch) 200%;
+  -webkit-background-clip:padding-box,text;
+  background-clip:padding-box,text;
+  background-repeat:no-repeat;
+  animation: 
+    b .7s infinite steps(1),   
+    t calc(var(--n)*.02s) steps(var(--n)) forwards;
+}
 
-        @keyframes tfull{
-          from {background-size:0 95%,0 100%}
-        }
-        @keyframes bfull{
-          100% {background-position:-200% 50%,0 0}
-        }
+@keyframes t{
+  from {background-size:0 200%}
+}
 
-        .two-column-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            gap: 25px;
-            margin-top: 10px;
-            opacity: 0;  
-            max-height: 0;
-            overflow: hidden;
-            transform: translateY(-10px);
-            transition: opacity 0.5s ease, max-height 0.5s ease, transform 0.5s ease;
-        }
+@keyframes b{
+  50% {background-position:0 -100%,0 0}
+}
 
-        .column {
-            flex: 1;
-            min-width: 200px;
-            padding: 15px;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 5px;
-        }
+.typing-full {
+  color:#0000;
+  background:
+    linear-gradient(#00FF33 0 0) 0 50%/150% 95%,
+    linear-gradient(#00FF33 0 0) 0 0  /100% 100%;
+  -webkit-background-clip:padding-box,text;
+  background-clip:padding-box,text;
+  background-repeat:no-repeat;
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
+  animation: 
+   tfull 1s forwards,
+   bfull 1s .8s forwards;
+}
 
-        /* Hidden state */
-        .hidden {
-            opacity: 0;
-            max-height: 0;
-            transform: translateY(-10px);
-        }
+@keyframes tfull{
+  from {background-size:0 95%,0 100%}
+}
 
-        /* Visible state */
-        .visible {
-            opacity: 1;
-            max-height: 550px; /* Adjust based on content */
-            transform: translateY(0);
-        }
+@keyframes bfull{
+  100% {background-position:-200% 50%,0 0}
+}
+
+.two-column-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 25px;
+    margin-top: 10px;
+    opacity: 0;  
+    max-height: 0;
+    overflow: hidden;
+    transform: translateY(-10px);
+    transition: opacity 0.5s ease, max-height 0.5s ease, transform 0.5s ease;
+}
+
+.column {
+    flex: 1;
+    min-width: 200px;
+    padding: 15px;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 5px;
+}
+
+.hidden {
+    opacity: 0;
+    max-height: 0;
+    transform: translateY(-10px);
+}
+
+.visible {
+    opacity: 1;
+    max-height: 550px; 
+    transform: translateY(0);
+}
