--- a/style.css
+++ b/style.css
@@ -46,8 +46,12 @@ h1, h2, h3 {
     color: #00FF33;
 }
 
+.arrow {
+  margin: 1em;
+}
+
 .section {
-    margin-top: 30px;
+    margin-bottom: 0px;
 }
 
 .brush-highlight {
@@ -85,7 +89,7 @@ h1, h2, h3 {
 .timeline-item {
     position: relative;
     display: inline-block;
-    width: 220px;
+    width: 230px;
     background: rgba(255, 255, 255, 0.1);
     margin: 10px;
     padding: 15px;
